# OOP_shell

./: CMakeLists.txt  fajl.txt  main.cpp  nesto.txt  test.txt  testall.txt
Commands/: BatchCommand.cpp  BatchCommand.h  Command.cpp  Command.h  DateCommand.cpp  DateCommand.h  EchoCommand.cpp  EchoCommand.h  HeadCommand.cpp  HeadCommand.h  NoArgumentCommand.h  Pipe.cpp  Pipe.h  PromptCommand.cpp  PromptCommand.h  RmCommand.cpp  RmCommand.h  TimeCommand.cpp  TimeCommand.h  TouchCommand.cpp  TouchCommand.h  TrCommand.cpp  TrCommand.h  TruncateCommand.cpp  TruncateCommand.h  WcCommand.cpp  WcCommand.h
Processing/: CommandFactory.cpp  CommandFactory.h  CustomExceptions.h  InputParser.cpp  InputParser.h  Shell.cpp  Shell.h
testovi/: fajl.txt  redirect_test.txt
